--- a/index.html
+++ b/index.html
@@ -262,6 +262,12 @@
 <li>5.15.5. <a href="#MBRScan">MBRScan</a></li>
 </ul></li>
 </ul></li>
+<li><ol start="6" type="1">
+  <li><a href="#LinuxForensics">Linux Forensics (In development)</a></li>
+  </ol></li>
+<li><ol start="7" type="1">
+  <li><a href="#MacForensics">Mac Forensics (In development)</a></li>
+  </ol></li>
 </ul>
 <!-- vscode-markdown-toc-config
     numbering=true
@@ -2472,5 +2478,10 @@ options:
 </tr>
 </tbody>
 </table>
+
+<h2 id="6-linux-forensics">6. <a name='LinuxForensics'></a>Linux Forensics (In development)</h2>
+
+<h2 id="7-mac-forensics">7. <a name='MacForensics'></a>Mac Forensics (In development)</h2>
+
 </body>
 </html>
